# datapond-python

./: README.md  pyproject.toml
src/datapond/: __init__.py  cli.py  connection.py  describe.py  download.py  registry.py
